--- a/Maps.html
+++ b/Maps.html
@@ -20,12 +20,15 @@
             margin: 0;
             padding: 0;
         }
-        
         output {
             display: block;
             margin-top: 4em;
             font-family: monospace;
             font-size: .8em;
+        }
+        .map-icon{
+            height: 10px;
+            width: 10px;
         }
     </style>
     <script>
@@ -38,6 +41,9 @@
                 },
                 zoom: 2,
             });
+            var opt = { minZoom: 2};
+            map.setOptions(opt);
+            readTextFile("file:////Users/abhishekpaul/Documents/NASA/a.csv");
         }
         setMarker = function(lat, lng) {
             lat = Number(lat)
@@ -46,11 +52,18 @@
                 lat: lat,
                 lng: lng
             };
+            var img = 'b.png'
+            var icon = {
+                url: img, // url
+                scaledSize: new google.maps.Size(20, 20), // scaled size
+                origin: new google.maps.Point(0,0), // origin
+                anchor: new google.maps.Point(0, 0) // anchor
+            };
             var marker = new google.maps.Marker({
-                position: myLatLng,
-                map,
+                position: new google.maps.LatLng(lat,lng),
+                map: map,
+                icon:icon
             });
-            
         }
         window.onload = function() {
         var fileInput = document.getElementById("csv"),
@@ -63,10 +76,26 @@
                         setMarker(data[i].split(',')[0],data[i].split(',')[1])
                     }
                 };
-                // start reading the file. When it is done, calls the onload event defined above.
                 reader.readAsBinaryString(fileInput.files[0]);
             };
-        fileInput.addEventListener('change', readFile);
+            fileInput.addEventListener('change', readFile);
+        }
+        function readTextFile(file)
+        {
+        var rawFile = new XMLHttpRequest();
+        rawFile.open("GET", file, false);
+        rawFile.onreadystatechange = function ()
+        {
+        if(rawFile.readyState === 4)
+        {
+            if(rawFile.status === 200 || rawFile.status == 0)
+            {
+                var allText = rawFile.responseText;
+                alert(allText);
+            }
+        }
+        }
+        rawFile.send(null);
         }
     </script>
 </head>
