--- a/Maps.html
+++ b/Maps.html
@@ -56,6 +56,9 @@
                     dataType: "text",
                     success: function(data) {
                         processData(data)
+                    },
+                    error: function(err) {
+                        console.log(err)
                     }
                 });
             });
