--- a/Maps.html
+++ b/Maps.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Simple Map</title>
+    <title>NASA Space Apps Challenge</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeQbYPlVEYFSbdJfsDofKG90tr7hECJDc&callback=initMap&libraries=&v=weekly" defer></script>
