--- a/Maps.html
+++ b/Maps.html
@@ -52,7 +52,7 @@
             $(document).ready(function() {
                 $.ajax({
                     type: "GET",
-                    url: "a.csv",
+                    url: "ab.csv",
                     dataType: "text",
                     success: function(data) {
                         processData(data)
