--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>NASA Space Apps Challenge</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeQbYPlVEYFSbdJfsDofKG90tr7hECJDc&callback=initMap&libraries=&v=weekly" defer></script>
     <script src="./index.js"></script>
 </head>
