--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 <body>
     <div id="map"></div>
+    <div id="input">
+        <input id="merc_date" type="date">
+        <button onclick="merc()" style="margin-left: 10px;">GO</button><br><br>
+        <input id="fire_date" type="date">
+        <button onclick="fire()" style="margin-left: 10px;">GO</button>
+    </div>
 </body>
 
 </html>
