--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
 </head>
 
 <body>
+    <div id="header">
+        <text id="name">GARLIC BREAD</text><br><br>
+        <a href="index.html" style="text-decoration: none;margin-left: 60px;margin-right: 60px;"><text id="tabs">Web Mercator Layers</text></a>
+        <a href="clouds.html" style="text-decoration: none;margin-left: 60px;margin-right: 60px;"><text id="tabs">MODIS Terra Clouds</text></a>
+    </div>
     <div id="map"></div>
     <div id="input">
         <input id="merc_date" type="date">
-        <button onclick="merc()" style="margin-left: 10px;">GO</button><br><br>
+        <button onclick="merc()" style="margin-left: 10px;" id="go">GO</button>
         <input id="fire_date" type="date">
-        <button onclick="fire()" style="margin-left: 10px;">GO</button>
+        <button onclick="fire()" style="margin-left: 10px;" id="go">GO</button><br><br>
+        <text id="label">MODIS Terra Aerosol</text>
+        <text id="label" style="margin-left: 405px;">FIRMS Data</text>
     </div>
 </body>
 
