MODIS aqua aerosol added

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <div id="input">
         <input id="merc_date" type="date">
         <button onclick="merc()" style="margin-left: 10px;" id="go">GO</button>
+        <input id="aqua_date" type="date">
+        <button onclick="aqua()" style="margin-left: 10px;" id="go">GO</button>
         <input id="fire_date" type="date">
         <button onclick="fire()" style="margin-left: 10px;" id="go">GO</button><br><br>
         <text id="label">MODIS Terra Aerosol</text>
-        <text id="label" style="margin-left: 405px;">FIRMS Data</text>
+        <text id="label" style="margin-left: 250px;">MODIS Aqua Aerosol</text>
+        <text id="label" style="margin-left: 275px;">FIRMS Data</text>
     </div>
 </body>
 
