--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button onclick="merc()" style="margin-left: 10px;" id="go">GO</button>
         <input id="aqua_date" type="date">
         <button onclick="aqua()" style="margin-left: 10px;" id="go">GO</button>
-        <input id="fire_date" type="date">
+        <button onclick="clr()" style="margin-left: 50px; width: 5%;" id="go">Clear</button>
         <button onclick="fire()" style="margin-left: 10px;" id="go">GO</button><br><br>
         <text id="label">MODIS Terra Aerosol</text>
         <text id="label" style="margin-left: 250px;">MODIS Aqua Aerosol</text>
