--- a/clouds.html
+++ b/clouds.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="header">
-        <text id="name">GARLIC BREAD</text><br><br>
+        <text id="name">MapIT</text><br><br>
         <a href="index.html" style="text-decoration: none;margin-left: 60px;margin-right: 60px;"><text id="tabs">Web Mercator Layers</text></a>
         <a href="clouds.html" style="text-decoration: none;margin-left: 60px;margin-right: 60px;"><text id="tabs">MODIS Terra Clouds</text></a>
     </div>
